Добавлен шаблон проекта AuthIS4.IdentityServer4Service, изменены порты

--- a/AuthIS4/AuthIS4.UsersApi/Views/Shared/_Menu.cshtml
+++ b/AuthIS4/AuthIS4.UsersApi/Views/Shared/_Menu.cshtml
@@ -1,3 +1,4 @@
 ﻿<ul>
     <li><a asp-controller="Home" asp-action="Index">Home page</a></li>
+    <li><a asp-controller="Home" asp-action="GetOrderSecret">GetOrderSecret page</a></li>
 </ul>
